# CarbonLens

./: .gitignore  Readme.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: awareness.py  calculator.py  emission_factors.py  recommendations.py  schemas.py  utils.py
frontend/: app.py  schemas.py
tests/: test_app.py  test_awareness.py  test_calculator.py  test_recommendations.py
