[project]
name = "CarboLens"
version = "0.1.0"
description = "An awareness-first carbon footprint estimator - no daily tracking, just a number you can feel and tips you can ask for."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting

[tool.ruff.lint.per-file-ignores]
# frontend/app.py needs sys.path.append() BEFORE its backend imports,
# since Streamlit launches it directly (not through pytest's
# pythonpath config below) - that ordering is intentional, not messy.
"frontend/app.py" = ["I001"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
# Lets test files import "backend.xyz" cleanly without each one needing
# its own sys.path.append boilerplate before the import block.
pythonpath = ["."]